fix "100% volunteer run" overlap

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ categories: home
 	<div id="network_pane">
 		<div class="container network" style="padding-bottom:5rem;">
 			<div class="comment-text network">
-				<span class="eng lang-text active">A network of Bushwick neighbors supporting neighbors.</span>
+				<span class="eng lang-text active" style="width: 105%">A network of Bushwick neighbors supporting neighbors.</span>
 				<span class="span lang-text">Una red de vecenes en Bushwick apoyando a vecines.</span>
 			</div>
 		</div>
