edit footer on embed pages

--- a/request.html
+++ b/request.html
@@ -5,5 +5,16 @@ permalink: /request/
 ---
 
 <div class="mini-extensions-form">
-    <iframe class="mini-extensions-iframe" src="https://airtable.com/embed/appEiw5APdZSlOwdm/shrxQfrxkSTTsBxZo?backgroundColor=orange" frameborder="0" onmousewheel="" width="100%" style="background: transparent;"></iframe>
+    <iframe class="mini-extensions-iframe" src="https://airtable.com/embed/appEiw5APdZSlOwdm/shrxQfrxkSTTsBxZo?backgroundColor=orange" frameborder="0" onmousewheel="" width="100%"  style="background: transparent;"></iframe>
 </div>
+
+<style>
+
+#footer {
+     margin-top: 0px;
+}
+
+#footer .pointing-img {
+    display: none !important;
+}
+</style>
