cleanup iframes and fix onboarding

--- a/onboarding.html
+++ b/onboarding.html
@@ -2,6 +2,7 @@
 title: Onboarding | Bushwick Ayuda Mutua
 layout: default
 categories: onboarding
+permalink: /onboarding/
 ---
 
 <div class="d-lg-flex header-container">
