--- a/request.html
+++ b/request.html
@@ -4,6 +4,4 @@ layout: embed
 permalink: /request/
 ---
 
-<div class="mini-extensions-form">
-    <iframe class="mini-extensions-iframe" src="https://airtable.com/embed/appEiw5APdZSlOwdm/shrxQfrxkSTTsBxZo?backgroundColor=orange" frameborder="0" onmousewheel="" width="100%"  style="background: transparent;"></iframe>
-</div>
+<iframe src="https://airtable.com/embed/appEiw5APdZSlOwdm/shrxQfrxkSTTsBxZo?backgroundColor=orange" frameborder="0" onmousewheel="" width="100%"  style="background: transparent;"></iframe>
