change request links

--- a/index.html
+++ b/index.html
@@ -260,10 +260,10 @@ categories: home
 		<div class="text-container">
 			<div class="title pb-3">
 				<span class="eng lang-text active">
-					Get <a target="_blank" class="underline" href="https://bit.ly/BAMrequest">assistance</a>
+					Get <a target="_blank" class="underline" href="/request">assistance</a>
 				</span>
 				<span class="span lang-text">
-					Cómo recibir <a target="_blank" class="underline" href="https://bit.ly/BAMrequest">asistencia</a>
+					Cómo recibir <a target="_blank" class="underline" href="/request">asistencia</a>
 				</span>
 			</div>
 			<p class="text pb-3">
@@ -279,7 +279,7 @@ categories: home
 				</span>
 			</p>
 			<div class="link">
-				<a target="_blank" href="https://bit.ly/BAMrequest">
+				<a target="_blank" href="/request/">
 					<span class="lang-text eng active">Request Help</span>
 					<span class="lang-text span">Solicite Ayuda</span>
 					<div class="arrow">{% include arrowSVG.html %}</div>
