make 404 page request form

--- a/404.html
+++ b/404.html
@@ -1,24 +1,6 @@
 ---
-layout: default
+title: Bushwick Ayuda Mutua | Request Assistance
+layout: embed
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+<iframe src="https://airtable.com/embed/appEiw5APdZSlOwdm/shrxQfrxkSTTsBxZo?backgroundColor=orange" frameborder="0" onmousewheel="" width="100%"  style="background: transparent;"></iframe>
