fix translations for onboarding kit

--- a/onboarding.html
+++ b/onboarding.html
@@ -8,9 +8,14 @@ permalink: /onboarding/
 <div class="d-lg-flex header-container">
 	<div class="container d-lg-flex align-items-lg-center" id="header_pane">
 		<div class="content-container">
-			<div class="title">BAM Onboarding Kit</div>
-			<div class="subtitle pt-3 pb-4">Use the Google Translate toggle to read this in your preferred language</div>
-
+			<div class="title">
+				<span class="eng lang-text active">BAM Onboarding Kit</span>
+				<span class="span lang-text">Kit de incorporación</span>
+			</div>
+			<div class="subtitle pt-3 pb-4">
+				<span class="eng lang-text active">Use the Google Translate toggle to read this in your preferred language</span>
+				<span class="span lang-text">Utilice el interruptor de traducción de Google para leer esto en su idioma preferido</span>
+			</div>
 			<!--BEGING GOOGLE TRANSLATE SCRIPT-->
 			<div id="google_translate_element"></div>
 			<script type="text/javascript">
@@ -456,3 +461,11 @@ permalink: /onboarding/
 		<!--placeholder for spreadsheet for account for hours worked--><p>&nbsp;</p>
 	</div>
 </div>
+
+<style>
+	.goog-te-combo {
+		width: 200px;
+		height: 50px;
+		font-size: 20px;
+	}
+</style>
