--- a/request.html
+++ b/request.html
@@ -3,21 +3,4 @@ title: Bushwick Ayuda Mutua | Request Assistance
 layout: embed
 permalink: /request/
 ---
-
-<div class="request-cta-container">
-        <div class="link">
-                <a href="/request/es">
-                        <span class="request-cta lang-text active">Español</span>
-                </a>
-        </div>
-        <div class="link">
-                <a href="request/en">
-                        <span class="request-cta lang-text active">English</span>
-                </a>
-        </div>
-        <div class="link">
-                <a href="/request/zh">
-                        <span class="request-cta lang-text active">广东话</span>
-                </a>
-        </div>
-</div>
+<iframe src="https://airtable.com/embed/appEiw5APdZSlOwdm/shrxQfrxkSTTsBxZo?backgroundColor=orange" frameborder="0" onmousewheel="" width="100%"  style="background: transparent;"></iframe>
