split out into new page for now and add some link styling

--- a/request-new.html
+++ b/request-new.html
@@ -1,23 +1,17 @@
 ---
 title: Bushwick Ayuda Mutua | Request Assistance
 layout: embed
-permalink: /request/
+permalink: /request-new/
 ---
 
-<div class="request-cta-container">
-        <div class="link">
-                <a href="/request/es">
-                        <span class="request-cta lang-text active">Español</span>
-                </a>
-        </div>
-        <div class="link">
-                <a href="request/en">
-                        <span class="request-cta lang-text active">English</span>
-                </a>
-        </div>
-        <div class="link">
-                <a href="/request/zh">
-                        <span class="request-cta lang-text active">广东话</span>
-                </a>
-        </div>
+<div class="links-list">
+        <a href="/request/es" target="_blank">
+                <div class="links-list-item">Español</div>
+        </a>
+        <a href="/request/en" target="_blank">
+                <div class="links-list-item">English</div>
+        </a>
+        <a href="/request/zh" target="_blank">
+                <div class="links-list-item">广东话</div>
+        </a>
 </div>
