add French Fillout form

--- a/request-new.html
+++ b/request-new.html
@@ -14,4 +14,7 @@ permalink: /request-new/
         <a href="/request/zh" target="_blank">
                 <div class="links-list-item">广东话</div>
         </a>
+        <a href="/request/fr" target="_blank">
+                <div class="links-list-item">Français</div>
+        </a>
 </div>
