add Arabic form translation

--- a/request-new.html
+++ b/request-new.html
@@ -17,4 +17,7 @@ permalink: /request-new/
         <a href="/request/fr" target="_blank">
                 <div class="links-list-item">Français</div>
         </a>
+        <a href="/request/ar" target="_blank">
+                <div class="links-list-item">عربي</div>
+        </a>
 </div>
