added arabic food pantries

--- a/resources/food-pantries.html
+++ b/resources/food-pantries.html
@@ -47,6 +47,8 @@ permalink: /resources/food-pantries/
     </a>
     <a href="/resources/food-pantries-mandarin.jpeg" target="_blank">
         <div class="links-list-item">食品救濟站：布希威克/里奇伍德</div>
+    <a href="/resources/food-pantries-arabic.jpg" target="_blank">
+        <div class="links-list-item">مخازن الطعام في بوشويك وريدجويد</div>
     </a>
 </div>
 
