--- a/request-new.html
+++ b/request-new.html
@@ -6,18 +6,18 @@ permalink: /request-new/
 
 <div class="links-list">
         <a href="/request/es" target="_blank">
-                <div class="links-list-item">Español</div>
+                <div class="links-list-item">Solicite asistencia</div>
         </a>
         <a href="/request/en" target="_blank">
-                <div class="links-list-item">English</div>
+                <div class="links-list-item">Request assistance</div>
         </a>
         <a href="/request/zh" target="_blank">
-                <div class="links-list-item">广东话</div>
+                <div class="links-list-item">请求援助</div>
         </a>
         <a href="/request/fr" target="_blank">
-                <div class="links-list-item">Français</div>
+                <div class="links-list-item">Remplir une demande d’assistance</div>
         </a>
         <a href="/request/ar" target="_blank">
-                <div class="links-list-item">عربي</div>
+                <div class="links-list-item">اطلب المساعدة</div>
         </a>
 </div>
