update request page

--- a/request.html
+++ b/request.html
@@ -3,4 +3,21 @@ title: Bushwick Ayuda Mutua | Request Assistance
 layout: embed
 permalink: /request/
 ---
-<iframe src="https://airtable.com/embed/appEiw5APdZSlOwdm/shrxQfrxkSTTsBxZo?backgroundColor=orange" frameborder="0" onmousewheel="" width="100%"  style="background: transparent;"></iframe>
+
+<div class="links-list">
+        <a href="/request/es" target="_blank">
+                <div class="links-list-item">Solicite asistencia</div>
+        </a>
+        <a href="/request/en" target="_blank">
+                <div class="links-list-item">Request assistance</div>
+        </a>
+        <a href="/request/zh" target="_blank">
+                <div class="links-list-item">请求援助</div>
+        </a>
+        <a href="/request/fr" target="_blank">
+                <div class="links-list-item">Remplir une demande d'assistance</div>
+        </a>
+        <a href="/request/ar" target="_blank">
+                <div class="links-list-item">اطلب المساعدة</div>
+        </a>
+</div>
