ensure monolingual forms do not open up new tab

--- a/request.html
+++ b/request.html
@@ -5,19 +5,19 @@ permalink: /request/
 ---
 
 <div class="links-list">
-        <a href="/request/es" target="_blank">
+        <a href="/request/es">
                 <div class="links-list-item">Solicite asistencia</div>
         </a>
-        <a href="/request/en" target="_blank">
+        <a href="/request/en">
                 <div class="links-list-item">Request assistance</div>
         </a>
-        <a href="/request/zh" target="_blank">
+        <a href="/request/zh">
                 <div class="links-list-item">请求援助</div>
         </a>
-        <a href="/request/fr" target="_blank">
+        <a href="/request/fr">
                 <div class="links-list-item">Remplir une demande d'assistance</div>
         </a>
-        <a href="/request/ar" target="_blank">
+        <a href="/request/ar">
                 <div class="links-list-item">اطلب المساعدة</div>
         </a>
 </div>
