switch to language

--- a/404.html
+++ b/404.html
@@ -4,19 +4,19 @@ layout: embed
 ---
 
 <div class="links-list">
-        <a href="/request/es" target="_blank">
-                <div class="links-list-item">Solicite asistencia</div>
+        <a href="/request/es">
+                <div class="links-list-item">Español</div>
         </a>
-        <a href="/request/en" target="_blank">
-                <div class="links-list-item">Request assistance</div>
+        <a href="/request/en">
+                <div class="links-list-item">English</div>
         </a>
-        <a href="/request/zh" target="_blank">
-                <div class="links-list-item">请求援助</div>
+        <a href="/request/zh">
+                <div class="links-list-item">广东话</div>
         </a>
-        <a href="/request/fr" target="_blank">
-                <div class="links-list-item">Remplir une demande d'assistance</div>
+        <a href="/request/fr">
+                <div class="links-list-item">Français</div>
         </a>
-        <a href="/request/ar" target="_blank">
-                <div class="links-list-item">اطلب المساعدة</div>
+        <a href="/request/ar">
+                <div class="links-list-item">اَلْعَرَبِيَّةُ</div>
         </a>
 </div>
