--- a/r.html
+++ b/r.html
@@ -4,4 +4,20 @@ layout: embed
 permalink: /r/
 ---
 
-<iframe src="https://airtable.com/embed/appEiw5APdZSlOwdm/shrxQfrxkSTTsBxZo?backgroundColor=orange" frameborder="0" onmousewheel="" width="100%"  style="background: transparent;"></iframe>
+<div class="links-list">
+    <a href="/request/es">
+            <div class="links-list-item">Español</div>
+    </a>
+    <a href="/request/en">
+            <div class="links-list-item">English</div>
+    </a>
+    <a href="/request/zh">
+            <div class="links-list-item">广东话</div>
+    </a>
+    <a href="/request/fr">
+            <div class="links-list-item">Français</div>
+    </a>
+    <a href="/request/ar">
+            <div class="links-list-item">اَلْعَرَبِيَّةُ</div>
+    </a>
+</div>
