--- a/request.html
+++ b/request.html
@@ -6,18 +6,18 @@ permalink: /request/
 
 <div class="links-list">
         <a href="/request/es">
-                <div class="links-list-item">Solicite asistencia</div>
+                <div class="links-list-item">Español</div>
         </a>
         <a href="/request/en">
-                <div class="links-list-item">Request assistance</div>
+                <div class="links-list-item">English</div>
         </a>
         <a href="/request/zh">
-                <div class="links-list-item">请求援助</div>
+                <div class="links-list-item">广东话</div>
         </a>
         <a href="/request/fr">
-                <div class="links-list-item">Remplir une demande d'assistance</div>
+                <div class="links-list-item">Français</div>
         </a>
         <a href="/request/ar">
-                <div class="links-list-item">اطلب المساعدة</div>
+                <div class="links-list-item">اَلْعَرَبِيَّةُ</div>
         </a>
 </div>
