--- a/resources/food-pantries.html
+++ b/resources/food-pantries.html
@@ -6,20 +6,20 @@ permalink: /resources/food-pantries/
 ---
 
 <div class="links-list">
-    <a href="/resources/food-pantries-english.jpeg" target="_blank">
+    <a href="/resources/food-pantries-english-may24.png" target="_blank">
         <div class="links-list-item">FOOD PANTRIES OF BUSHWICK/RIDGEWOOD</div>
     </a>
-    <a href="/resources/food-pantries-spanish.jpeg" target="_blank">
+    <a href="/resources/food-pantries-spanish-may24.png" target="_blank">
         <div class="links-list-item">DESPENSAS DE ALIMENTOS EN BUSHWICK/RIDGEWOOD</div>
     </a>
-    <a href="/resources/food-pantries-french.jpeg" target="_blank">
+    <a href="/resources/food-pantries-french-may24.png" target="_blank">
         <div class="links-list-item">DISTRIBUTION DE NOURRITURE À BUSHWICK/RIDGEWOOD</div>
     </a>
-    <a href="/resources/food-pantries-mandarin.jpeg" target="_blank">
+    <a href="/resources/food-pantries-mandarin-may24.png" target="_blank">
         <div class="links-list-item">食品救濟站：布希威克/里奇伍德</div>
-    <a href="/resources/food-pantries-arabic.jpg" target="_blank">
+    <a href="/resources/food-pantries-arabic-may24.png" target="_blank">
         <div class="links-list-item">مخازن الطعام في بوشويك وريدجويد</div>
     </a>
 </div>
 
-<img class="map" src="/resources/food-pantries-map.jpeg" width="100%"></img>
+<img class="map" src="/resources/food-pantries-map-may24.png" width="100%"></img>
