--- a/resources/food-pantries.html
+++ b/resources/food-pantries.html
@@ -6,16 +6,16 @@ permalink: /resources/food-pantries/
 ---
 
 <div class="links-list">
-    <a href="/resources/food-pantries-english-may24.png" target="_blank">
+    <a href="/resources/food-pantries-english-oct24.pdf" target="_blank">
         <div class="links-list-item">FOOD PANTRIES OF BUSHWICK/RIDGEWOOD</div>
     </a>
-    <a href="/resources/food-pantries-spanish-may24.png" target="_blank">
+    <a href="/resources/food-pantries-spanish-oct24.pdf" target="_blank">
         <div class="links-list-item">DESPENSAS DE ALIMENTOS EN BUSHWICK/RIDGEWOOD</div>
     </a>
     <a href="/resources/food-pantries-french-may24.png" target="_blank">
         <div class="links-list-item">DISTRIBUTION DE NOURRITURE À BUSHWICK/RIDGEWOOD</div>
     </a>
-    <a href="/resources/food-pantries-mandarin-may24.png" target="_blank">
+    <a href="/resources/food-pantries-chinese-oct24.pdf" target="_blank">
         <div class="links-list-item">食品救濟站：布希威克/里奇伍德</div>
     <a href="/resources/food-pantries-arabic-may24.png" target="_blank">
         <div class="links-list-item">مخازن الطعام في بوشويك وريدجويد</div>
