arabic & french translations for food pantries

--- a/resources/food-pantries.html
+++ b/resources/food-pantries.html
@@ -12,12 +12,12 @@ permalink: /resources/food-pantries/
     <a href="/resources/food-pantries-spanish-oct24.pdf" target="_blank">
         <div class="links-list-item">DESPENSAS DE ALIMENTOS EN BUSHWICK/RIDGEWOOD</div>
     </a>
-    <a href="/resources/food-pantries-french-may24.png" target="_blank">
+    <a href="/resources/food-pantries-french-oct24.pdf" target="_blank">
         <div class="links-list-item">DISTRIBUTION DE NOURRITURE À BUSHWICK/RIDGEWOOD</div>
     </a>
     <a href="/resources/food-pantries-chinese-oct24.pdf" target="_blank">
         <div class="links-list-item">食品救濟站：布希威克/里奇伍德</div>
-    <a href="/resources/food-pantries-arabic-may24.png" target="_blank">
+    <a href="/resources/food-pantries-arabic-oct24.pdf" target="_blank">
         <div class="links-list-item">مخازن الطعام في بوشويك وريدجويد</div>
     </a>
 </div>
