--- a/index.html
+++ b/index.html
@@ -73,55 +73,79 @@ categories: home
 			</a>
 		</div>
 	</div>
-
-	{% include neighbors.html %}
-
-	<div id="network_pane">
-		<div class="container network" style="padding-bottom:5rem;">
-			<div class="comment-text network">
-				<span class="eng lang-text active" style="width: 105%">A network of Bushwick neighbors supporting neighbors.</span>
-				<span class="span lang-text">Una red de vecenes en Bushwick apoyando a vecines.</span>
-			</div>
+	<br />
+	<h2 class="eng lang-text active">
+		BAM has fulfilled the following requests over the past month:
+	</h2>
+	<h2 class="span lang-text">
+		BAM ha cumplido las siguientes solicitudes durante el último mes:
+	</h2>
+	<div id="fulfilled-requests-counter-container" class="request-row">
+	</div>
+	<br />
+	<div class="request-cta-container">
+		<div class="link">
+			<a href="/volunteer">
+				<span class="request-cta lang-text eng active">Volunteer</span>
+				<span class="request-cta lang-text span">Voluntario</span>
+				<div class="arrow">{% include arrowSVG.html %}</div>
+			</a>
 		</div>
 	</div>
+</div>
+
+{% include neighbors.html %}
+
+<div id="network_pane">
+	<div class="container network" style="padding-bottom:5rem;">
+		<div class="comment-text network">
+			<span class="eng lang-text active" style="width: 105%">A network of Bushwick neighbors supporting
+				neighbors.</span>
+			<span class="span lang-text">Una red de vecenes en Bushwick apoyando a vecines.</span>
+		</div>
+	</div>
+</div>
 </div>
 
 <!-- Carousel-->
 
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="./assets/carousel/carousel2.jpg" alt="BAM volunteer packaging eggs">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="./assets/carousel/carousel3.jpg" alt="Two volunteers reading instructions outside Latinas Americanas">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="./assets/carousel/carousel4.jpg" alt="Volunteers packaging food for distribution">
-    </div>
-        <div class="carousel-item">
-      <img class="d-block w-100" src="./assets/carousel/carousel5.jpg" alt="Ayuda Mutua graffiti">
-    </div>
-        <div class="carousel-item">
-      <img class="d-block w-100" src="./assets/carousel/carousel6.jpg" alt="Volunteer holding bags for distribution">
-    </div>
-  </div> 
+	<ol class="carousel-indicators">
+		<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+		<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+		<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+		<li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+		<li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+	</ol>
+	<div class="carousel-inner">
+		<div class="carousel-item active">
+			<img class="d-block w-100" src="./assets/carousel/carousel2.jpg" alt="BAM volunteer packaging eggs">
+		</div>
+		<div class="carousel-item">
+			<img class="d-block w-100" src="./assets/carousel/carousel3.jpg"
+				alt="Two volunteers reading instructions outside Latinas Americanas">
+		</div>
+		<div class="carousel-item">
+			<img class="d-block w-100" src="./assets/carousel/carousel4.jpg"
+				alt="Volunteers packaging food for distribution">
+		</div>
+		<div class="carousel-item">
+			<img class="d-block w-100" src="./assets/carousel/carousel5.jpg" alt="Ayuda Mutua graffiti">
+		</div>
+		<div class="carousel-item">
+			<img class="d-block w-100" src="./assets/carousel/carousel6.jpg"
+				alt="Volunteer holding bags for distribution">
+		</div>
+	</div>
 
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+	<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		<span class="sr-only">Previous</span>
+	</a>
+	<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		<span class="sr-only">Next</span>
+	</a>
 </div>
 
 
@@ -288,7 +312,7 @@ categories: home
 		</div>
 	</div>
 </div>
-    
+
 {% include neighbors.html %}
 
 <!-- Carousel-->
