Update services and inventory listings (#37)
* Update services and inventory listings

- Remove outdated "primarily groceries as of Spring 2023" reference
- Add adult diapers to Essential Goods Spending inventory
- Update website copy to reflect both baby and adult diapers
- Maintain bilingual support for all changes

Fixes #36



* Remove groceries from services listings

- Filter out groceries from outstanding and fulfilled requests counters
- Comment out Food/Groceries section in onboarding document
- Comment out Food Spending budget section
- Service no longer offered as of 2024



* Remove grocery sections entirely from onboarding

- Remove Food/Groceries section from "How BAM is Structured"
- Remove Food Spending budget section
- Update section numbering (4.3→4.2, 4.4→4.3)
- Remove Food Spending from table of contents


* Fix Spanish translation in groceries filter

Use correct Spanish translation 'Comida' instead of 'víveres'
Simplify filter to only check English translation field

--- a/onboarding.html
+++ b/onboarding.html
@@ -65,7 +65,6 @@ permalink: /onboarding/
 				<li><a href="#discretionary-spending-protocols">Discretionary Spending Protocols</a>
 					<ol>
 						<li><a href="#discretionary-spending-operations-spending">Operations Spending</a></li>
-						<li><a href="#discretionary-spending-food-spending">Food Spending</a></li>
 						<li><a href="#discretionary-spending-eg-spending">Essential Goods Spending</a></li>
 						<li><a href="#discretionary-spending-ss-spending">Social Services Spending</a></li>
 					</ol>
@@ -118,14 +117,8 @@ permalink: /onboarding/
 		<hr>
 		
 		<h2 id="bam-structure">1. How BAM is Structured</h2>
-		<p>BAM operates as a coalition of many different community partners maintaining a framework with which we can support each other’s basic needs, making social movement work more accessible to all. This includes the following areas:
+		<p>BAM operates as a coalition of many different community partners maintaining a framework with which we can support each other's basic needs, making social movement work more accessible to all. This includes the following areas:
 			<ul>
-				<li><strong>Food:</strong> primarily groceries as of Spring 2023
-					<ul>
-						<li><a href="https://docs.google.com/document/d/1aw8oaArUdL53V3I4i_UQYJrcWXvjuVPUlF0IhIrCUoQ/mobilebasic" target="_blank">BAM Food Rolling Notes Doc</a></li>
-						<li>BAM Food Ordering Process Doc</li>
-					</ul>
-				</li>
 				<li><strong>Essential Goods (EG):</strong> including toiletries, kitchen supplies, and furniture
 					<ul>
 						<li><a href="http://bit.ly/bam-egnotes" target="_blank">BAM EG Rolling Notes Doc</a></li>
@@ -268,20 +261,12 @@ permalink: /onboarding/
 				<li>Printing</li>
 			</ul>
 		</p>
-		<h3 id="discretionary-spending-food-spending">4.2 Food Spending</h3>
-		<p>
-			<ul>
-				<li>Mr. Kiwi</li>
-				<li>Western Beef / Dry Goods</li>
-				<li>Star Route Farms</li>
-				<li>Eggs</li>
-			</ul>
-		</p>
-		<h3 id="discretionary-spending-eg-spending">4.3 Essential Goods Spending</h3>
+		<h3 id="discretionary-spending-eg-spending">4.2 Essential Goods Spending</h3>
 		<p>
 			<ul>
 				<li>Soap</li>
 				<li>Baby Diapers</li>
+				<li>Adult Diapers</li>
 				<li>Pads</li>
 				<li>Toothpaste</li>
 				<li>Kitchen Supplies</li>
@@ -290,7 +275,7 @@ permalink: /onboarding/
 				<li>School Supplies</li>
 			</ul>
 		</p>
-		<h3 id="discretionary-spending-ss-spending">4.4 Social Services Spending</h3>
+		<h3 id="discretionary-spending-ss-spending">4.3 Social Services Spending</h3>
 		<p>As of Spring 2023, Social Services operates on a <strong>$0 budget</strong>.</p>
 		<p>Currently, items we are generally able to <strong>secure at no cost</strong> in amounts that match need are: clothes, masks, tampons. We do <strong>not</strong> approve expenses for these items without prior discussion.</p>
 		
