rename traditional chinese

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@ layout: embed
                 <div class="links-list-item">English</div>
         </a>
         <a href="/request/zh">
-                <div class="links-list-item">广东话</div>
+                <div class="links-list-item">繁體中文</div>
         </a>
         <a href="/request/fr">
                 <div class="links-list-item">Français</div>
