--- a/request.html
+++ b/request.html
@@ -12,7 +12,7 @@ permalink: /request/
                 <div class="links-list-item">English</div>
         </a>
         <a href="/request/zh">
-                <div class="links-list-item">广东话</div>
+                <div class="links-list-item">繁體中文</div>
         </a>
         <a href="/request/fr">
                 <div class="links-list-item">Français</div>
