--- a/request.html
+++ b/request.html
@@ -11,8 +11,11 @@ permalink: /request/
         <a href="/request/en">
                 <div class="links-list-item">English</div>
         </a>
-        <a href="/request/zh">
+        <a href="/request/zh-hant">
                 <div class="links-list-item">繁體中文</div>
+        </a>
+        <a href="/request/zh-hans">
+                <div class="links-list-item">简体中文</div>
         </a>
         <a href="/request/fr">
                 <div class="links-list-item">Français</div>
