--- a/resources/food-pantries.html
+++ b/resources/food-pantries.html
@@ -6,18 +6,24 @@ permalink: /resources/food-pantries/
 ---
 
 <div class="links-list">
-    <a href="/resources/food-pantries-english-april25.pdf" target="_blank">
+    <a href="/resources/food-pantries-english-nov25.pdf" target="_blank">
         <div class="links-list-item">FOOD PANTRIES OF BUSHWICK/RIDGEWOOD</div>
     </a>
-    <a href="/resources/food-pantries-spanish-april25.pdf" target="_blank">
+    <a href="/resources/food-pantries-spanish-nov25.pdf" target="_blank">
         <div class="links-list-item">DESPENSAS DE ALIMENTOS EN BUSHWICK/RIDGEWOOD</div>
     </a>
-    <a href="/resources/food-pantries-french-april25.pdf" target="_blank">
+    <a href="/resources/food-pantries-french-nov25.pdf" target="_blank">
         <div class="links-list-item">DISTRIBUTION DE NOURRITURE À BUSHWICK/RIDGEWOOD</div>
     </a>
-    <a href="/resources/food-pantries-chinese-april25.pdf" target="_blank">
-        <div class="links-list-item">食品救濟站：布希威克/里奇伍德</div>
-    <a href="/resources/food-pantries-arabic-april25.pdf" target="_blank">
+    <a href="/resources/food-pantries-mandarin-april25.pdf" target="_blank">
+        <div class="links-list-item">食品救济站：布希威克/里奇伍德 </div>
+
+<!-- to update -->
+    <a href="/resources/food-pantries-cantonese-nov25.pdf" target="_blank">
+        <div class="links-list-item">食品救濟站：布希維克／里奇伍德</div>
+<!--  -->
+
+    <a href="/resources/food-pantries-arabic-nov25.pdf" target="_blank">
         <div class="links-list-item">مخازن الطعام في بوشويك وريدجويد</div>
     </a>
 </div>
